--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
-<body class="font-myfont bg-black">
+<body class="font-myfont text-white bg-black">
 
     <!-- HEADER -->
         <header id="home" class="h-screen flex justify-center items-end lg:justify-end overflow-hidden">
